# egui-rad-builder

./: Cargo.toml  Claude.md  README.md
.github/workflows/: ci.yml
src/: app.rs  highlight.rs  main.rs  project.rs
src/widget/: mod.rs
