[package]
name = "egui-rad-builder"
version = "0.1.10"
edition = "2024"
description = "Tool for quickly designing egui user interfaces"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/egui-rad-builder"
readme = "README.md"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "egui_extras/serde"]

[dependencies]
chrono = "0.4.42"
copypasta = "0.10"
eframe = "0.33"
egui = { version = "0.33", features = ["serde"] }
egui_extras = { version = "0.33", features = ["chrono", "syntect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
