[package]
name = "egui-rad-builder"
version = "0.1.10"
edition = "2024"
description = "Tool for quickly designing egui user interfaces "
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/egui-rad-builder"
readme = "README.md"

[dependencies]
chrono = "0.4.42"
eframe = "0.33.0"
egui = { version = "0.33", features = ["serde"] }
# egui_dock = "0.18"  # Reserved for future docking system
egui_extras = { version = "0.33.0", features = ["chrono", "syntect"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
